--- a/package.json
+++ b/package.json
@@ -153,7 +153,7 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-react": "^6.9.0",
     "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "beta",
     "fbjs-scripts": "^0.7.1",
     "file-loader": "^0.10.0",
     "flow-bin": "^0.38.0",
@@ -173,11 +173,10 @@
     "style-loader": "^0.13.1",
     "tcomb": "^3.2.16",
     "url-loader": "^0.5.7",
-    "webpack": "^1.14.0",
+    "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.15.0",
-    "webpack-merge": "^2.4.0",
-    "webpack-validator": "^2.3.0"
+    "webpack-merge": "^2.4.0"
   },
   "dependencies": {
     "electron-debug": "^1.1.0",
